apps/sonarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - name: sonarr
          image: sonarr:4.0.9
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: data-videos
              mountPath: /data/series
              subPath: Series
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: data-videos
          persistentVolumeClaim:
            claimName: videos
