apps/sonarr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  replicas: 1
  serviceName: sonarr
  selector:
    matchLabels:
      app.kubernetes.io/instance: sonarr
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - name: sonarr
          image: sonarr
          ports:
            - name: http
              containerPort: 8989
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 360
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: run
              mountPath: /run
          securityContext:
            capabilities:
              add:
                - CHOWN
                - FOWNER
                - SETGID
                - SETUID
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: rclone-config
          configMap:
            name: sonarr-rclone
        - name: startup-config
          secret:
            secretName: sonarr
        - name: run
          emptyDir: {}
