apps/sonarr/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
    - name: http
      port: 8989
      targetPort: http
  selector:
    app.kubernetes.io/name: sonarr
