apps/sonarr/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  defaultBackend:
    service:
      name: sonarr
      port:
        name: http
  tls:
    - hosts:
        - sonarr
